--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -61,8 +61,8 @@
               nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/admin']" (click)="collapseMenu()" routerLinkActive="active">Admin</a>
-            <a *ngIf="isAdmin" class="nav-link" [routerLink]="['/admin']" routerLinkActive="active">Admin</a>
+            <a *ngIf="isAdmin" class="nav-link" [routerLink]="['/admin']" (click)="collapseMenu()"
+              routerLinkActive="active">Admin</a>
           </li>
         </ul>
       </div>
