--- a/src/app/pages/pedido/pedido.component.html
+++ b/src/app/pages/pedido/pedido.component.html
@@ -1,16 +1,24 @@
 <div class="ultimoPedido">
   <h2>Mis últimos pedidos</h2>
-  <div *ngFor="let pedido of pedidos" class="listaPedidos">
+  <div *ngFor="let order of user_orders" class="listaPedidos">
     <mat-list role="list" class="pedido">
-      <mat-list-item class="date"> probando </mat-list-item>
+      <mat-list-item class="date">
+        <span>{{ order.date | date:"dd / MM / YYYY" }}</span>
+        <span class="spacer"></span>
+        <span>Estado: {{ order.state }}</span>
+      </mat-list-item>
       <div class="detalles">
-        <mat-list-item class="item">
-
-        </mat-list-item>
+        <div *ngFor="let detail of order.details" class="detalles">
+          <mat-list-item class="item">
+            <span>{{ detail.quantity }}x </span>
+            <span>{{ detail.product.name }}</span>
+          </mat-list-item>
+        </div>
       </div>
     </mat-list>
     <div class="repetirPedido">
       <button mat-raised-button color="primary">Repetir pedido</button>
     </div>
+
   </div>
 </div>
