--- a/src/app/pages/pedido/pedido.component.scss
+++ b/src/app/pages/pedido/pedido.component.scss
@@ -46,6 +46,11 @@
       margin-bottom: auto;
       background-color: $color-negro;
 
+      .spacer {
+        margin-right: 0 auto;
+        /* Ajusta el valor según el espacio deseado */
+      }
+
       span {
         margin: auto;
         height: auto;
