--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -1,15 +1,19 @@
+:host {
+  display: flex;
+  background-color: #fff;
+}
 .fundo {
   animation: scales 3s alternate infinite;
   transform-origin: center;
 }
 
 .pao-baixo {
-  animation: rotatepao 14s cubic-bezier(.1, .49, .41, .97) infinite;
+  animation: rotatepao 14s cubic-bezier(0.1, 0.49, 0.41, 0.97) infinite;
   transform-origin: center;
 }
 
 .pao-cima {
-  animation: rotatepao 7s 1s cubic-bezier(.1, .49, .41, .97) infinite;
+  animation: rotatepao 7s 1s cubic-bezier(0.1, 0.49, 0.41, 0.97) infinite;
   transform-origin: center;
 }
 
@@ -35,28 +39,27 @@
 
 @keyframes scales {
   from {
-    transform: scale(0.98)
+    transform: scale(0.98);
   }
 
   to {
-    transform: scale(1)
+    transform: scale(1);
   }
 }
 
 @keyframes rotatepao {
   0% {
-    transform: rotate(0deg)
+    transform: rotate(0deg);
   }
 
   50%,
   60% {
-    transform: rotate(-20deg)
+    transform: rotate(-20deg);
   }
 
   100% {
-    transform: rotate(0deg)
+    transform: rotate(0deg);
   }
-
 }
 
 @keyframes olhos {
@@ -73,9 +76,7 @@
   0% {
     opacity: 0;
   }
-
 }
-
 
 .main {
   min-height: 600px;
@@ -103,27 +104,25 @@
 }
 
 .btn {
-
   margin-top: 20px;
   padding: 10px 20px;
   border-radius: 5px;
-  border: 1px solid #4B4B62;
+  border: 1px solid #4b4b62;
   background-color: transparent;
-  color: #4B4B62;
+  color: #4b4b62;
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;  
+  transition: all 0.3s ease-in-out;
 }
 
 .btn:hover {
   transform: scale(1.2);
-  background-color: #4B4B62;
+  background-color: #4b4b62;
   color: #fff;
 }
 
 @keyframes dash {
-  
   0%,
   30% {
     fill: 4B4B62;
